@@ -1,5 +1,5 @@
 /* $Id$ */
-#define CURRENT_VERSION "w3m/0.3.2rc1"
+#define CURRENT_VERSION "w3m/0.3.2rc1+cvs"
 
 #ifndef FM_H
 char *w3m_version = CURRENT_VERSION;
